fixed letter-spacing for cards__author

--- a/blocks/cards/__author/cards__author.css
+++ b/blocks/cards/__author/cards__author.css
@@ -5,4 +5,5 @@
     font-size: 14px;
     line-height: 22.03px;
     margin: 0;
+    letter-spacing: 0.08em;
 }
